@@ -707,3 +707,14 @@ function showMenu(obj, newMenu) {
         obj.menu = newMenu;
     }
 }
+
+function arrayMove(arr, from, to) {
+    if (to >= arr.length) {
+        var k = to - arr.length + 1;
+        while (k--) {
+            arr.push(undefined);
+        }
+    }
+    arr.splice(to, 0, arr.splice(from, 1)[0]);
+    return arr;
+};
