@@ -19,6 +19,7 @@
 13. Add a 'My Music' entry, and place 'Artists', etc, within this.
 14. Allow pinning of items from 'My Music.'
 15. Always use server provided categories.
+16. Allow drag'n'drop re-ordering of top-level browse items.
 
 0.9.7
 -----
